--- a/stendev.css
+++ b/stendev.css
@@ -1,17 +1,34 @@
-.body {
+
+body {
+    background: linear-gradient(135deg, #355dcc 0%, #4a90e2 50%, #852ed6 100%);
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #1d9e89;
+    color: rgb(2, 2, 2);
+    justify-content: center;
+    align-items: center;
 }
-.header {
-    background-color: #1d9e89;
+.stenanim {
+     animation: pulsecolor 2s infinite,
+               typing 4s steps(120, end) forwards;
+    font-size: x-large;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
     color: rgb(0, 0, 0);
-    padding: 10px;
+    padding: 1px;
     text-align: center;
+}
+@keyframes typing {
+    from { width: 0; }
+    to { width: 100%; }
+}
+@keyframes pulsecolor {
+    0% { color: #07b35d; }
+    50% { color: #036969; }
+    100% { color: #940694; }
 }
 .container{
     display: flex;
+    flex-direction: row;
 }
 .box1{
     width:20%;
@@ -21,10 +38,20 @@
 .box2 img{
     width: 80%;
     height: auto;
-    
+    margin-top: 50px;
+    margin-left: 100px;
     border-radius: 20px;
 }
 .section {
     padding: 40px 20px;
     border-bottom: 1px solid #ccc;
+}
+.button {
+    background-color: rgb(140, 196, 245);
+    width: 150px; ;
+    padding: 2px;
+    margin: 3px;
+    border-radius: 6px;
+    border-color: aliceblue;
+
 }
